RESOLVED FIXED19025
SQUIRRELFISH: malformed syntax in onload handler causes crash
https://bugs.webkit.org/show_bug.cgi?id=19025
Summary SQUIRRELFISH: malformed syntax in onload handler causes crash
Cameron Zwarich (cpst)
Reported 2008-05-12 23:02:10 PDT
The following document causes SquirrelFish to crash: <body onload="$#*@#(!_)"></body>
Attachments
Oliver Hunt
Comment 1 2008-05-14 00:26:31 PDT
M JavaScriptCore/ChangeLog M JavaScriptCore/kjs/function_object.cpp M LayoutTests/ChangeLog A LayoutTests/fast/js/invalid-syntax-for-function-expected.txt A LayoutTests/fast/js/invalid-syntax-for-function.html Committed r33436
Note You need to log in before you can comment on or make changes to this bug.