Bug 19025: SQUIRRELFISH: malformed syntax in onload handler causes crash <https://bugs.webkit.org/show_bug.cgi?id=19025>

Reviewed by Geoff

Simple fix -- move the use of functionBodyNode to after the null check.


git-svn-id: http://svn.webkit.org/repository/webkit/branches/squirrelfish@33436 268f45cc-cd09-0410-ab3c-d52691b4dbfc